--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 mybatis.type-aliases-package = @project.groupId@
+
+app.mainGuild = 739774550740303902
+# 1045727530390392952
+
+app.outputChannel = 1124748615236198410
+# 1045739533251129446
+
+app.embedColor = #e38143
