--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,20 @@ app.prefix = b!
 app.groupId = @project.groupId@
 
 spring.datasource.url = jdbc:postgresql://localhost:5431/postgres
-spring.datasource.username = postgres
+spring.datasource.username = ${POSTGRES_USER}
 spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 mybatis.type-aliases-package = @project.groupId@
 
-app.mainGuild = 739774550740303902
-# 1045727530390392952
-
-app.outputChannel = 1124748615236198410
-# 1045739533251129446
+app.mainGuild = 1045727530390392952
+app.outputChannel = 1045739533251129446
+app.roleplayChannel = 1067801438102761567
+app.roleplayRole = 1060231459773886616
+app.kohai = 1070415674851209236
+app.mainChannel = 1045735795828474027
+app.unverified = 1070415674851209236
+app.staff = 1045735795828474027
 
 app.embedColor = #e38143
 
