Bug fix; Birthday logic.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,17 @@ spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
 
 mybatis.type-aliases-package = @project.groupId@
+mybatis.type-handlers-package = lonter.buibot.model.handlers
 
 app.mainGuild = 1045727530390392952
 app.outputChannel = 1045739533251129446
 app.roleplayChannel = 1067801438102761567
 app.roleplayRole = 1060231459773886616
-app.kohai = 1070415674851209236
+app.kohai = 1045734718655692841
 app.mainChannel = 1045735795828474027
 app.unverified = 1070415674851209236
 app.staff = 1045735795828474027
+app.news = 1051122051466936340
 
 app.embedColor = #e38143
 
