--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
       <groupId> org.springframework </groupId>
       <artifactId> spring-webflux </artifactId>
     </dependency>
+
+    <dependency>
+      <groupId> com.fasterxml.jackson.core </groupId>
+      <artifactId> jackson-databind </artifactId>
+    </dependency>
   </dependencies>
 
   <build>
