--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,12 @@ app.outputChannel = 1045739533251129446
 app.roleplayChannel = 1067801438102761567
 app.roleplayRole = 1060231459773886616
 app.kohai = 1045734718655692841
-app.mainChannel = 1045735795828474027
+app.mainChannel = 1045727531766132848
 app.unverified = 1070415674851209236
 app.staff = 1045735795828474027
 app.news = 1051122051466936340
+app.coordsAPI = https://nominatim.openstreetmap.org/search
+app.timezoneAPI = http://api.timezonedb.com/v2.1//get-time-zone
 
 app.embedColor = #e38143
 
