--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.url = jdbc:postgresql://localhost:5431/postgres
 spring.datasource.username = ${POSTGRES_USER}
 spring.datasource.password = ${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.hikari.max-lifetime = 600000
 
 mybatis.type-aliases-package = @project.groupId@
 mybatis.type-handlers-package = lonter.buibot.model.handlers
