--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId> org.springframework.boot </groupId>
     <artifactId> spring-boot-starter-parent </artifactId>
-    <version> 3.5.3 </version>
+    <version> 4.0.2 </version>
     <relativePath/>
   </parent>
 
@@ -55,13 +55,13 @@
     <dependency>
       <groupId> org.mybatis.spring.boot </groupId>
       <artifactId> mybatis-spring-boot-starter </artifactId>
-      <version> 3.0.4 </version>
+      <version> 4.0.1 </version>
     </dependency>
 
     <dependency>
       <groupId> org.mybatis.spring.boot </groupId>
       <artifactId> mybatis-spring-boot-starter-test </artifactId>
-      <version> 3.0.4 </version>
+      <version> 4.0.1 </version>
       <scope> test </scope>
     </dependency>
 
@@ -73,6 +73,12 @@
     <dependency>
       <groupId> com.fasterxml.jackson.core </groupId>
       <artifactId> jackson-databind </artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId> lonter </groupId>
+      <artifactId> bat </artifactId>
+      <version> 0.1 </version>
     </dependency>
   </dependencies>
 
